Improve card heights to avoid scrollbars on smaller screens

--- a/static/sass/_pattern_p-card.scss
+++ b/static/sass/_pattern_p-card.scss
@@ -36,6 +36,8 @@
   }
 
   .p-card {
+    min-height: 12rem;
+    
     .p-card__thumbnail--small {
       filter: grayscale(100%);
       height: 1.5rem;
@@ -46,10 +48,6 @@
         filter: none;
         opacity: 1;
       }
-    }
-
-    .p-card__content {
-      height: 5.5rem;
     }
   }
 }
